# ai_libs

./: .gitignore  README.md
libs/: pyproject.toml
libs/AILibs/: __init__.py
libs/AILibs/common/: README.md  dictionary.py
libs/AILibs/control/: __init__.py
libs/AILibs/control/libs_lqr/: __init__.py  lqr_discrete.py  lqri_discrete.py  lqri_discrete__.py  lqri_discrete_old.py  lqri_du_discrete.py
libs/AILibs/control/libs_mpc/: __init__.py  mpc_analytical.py
libs/AILibs/datasets/: __init__.py  dataset_collator.py  images_loader.py  tabular_split.py  window_dataset.py
libs/AILibs/dsp/: __init__.py  biquad_filter.py  kalman_filter.py  madgwick_filter.py  system_identification.py
libs/AILibs/forest/: __init__.py  extended_isolation_forest.py  isolation_forest.py  random_forest.py
libs/AILibs/linear_regression/: __init__.py  linear_regression.py  ransac.py
libs/AILibs/metrics/: __init__.py  anomaly_evaluation.py  detection_evaluation.py  regression_evaluation.py  tune_threshold.py  utils.py
libs/AILibs/old/algos_libs/: __init__.py  dictionary_aug.py  extended_isolation_forest.py  isolation_forest copy.py  isolation_forest.py  kalman_filter.py
libs/AILibs/old/dataset_libs/: __init__.py  csv_dataset.py  dataset_collator.py  images_aug.py  images_loader.py  tabular_split.py  testing_dataset.py  window_dataset.py
libs/AILibs/old/image_libs/: depth_utils.py  homography.py  homography_mat.py  images_loader.py  kp_model.py  (+9 more)
libs/AILibs/test_data/: __init__.py  dynamical_system.py
libs/AILibs/utils/: __init__.py  dynamical_system_discrete.py  ode_solver.py
(+63 files in other folders)
