[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AILibs"
version = "1.0.0"
description = "A custom AI library."
authors = [
  { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  # Add runtime dependencies here, e.g. "numpy", "requests>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "mypy"
]

[tool.setuptools.packages.find]
where = ["."]